changes to home screen

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -144,7 +144,7 @@ a.ui_button.small {
 
 #header {
     border-bottom:2px solid #777777;
-    background-image: linear-gradient(to bottom, #74ace0, #659fd4);
+    background-image: linear-gradient(to bottom, #305A81, #1367B3);
 }
 
 #header .ui_button {
