--- a/app/views/achievements/index.html.erb
+++ b/app/views/achievements/index.html.erb
@@ -26,17 +26,7 @@
 
 <div class="rhelper">
   <div class="block">
-    <div class="title"><h3><%= t("achievements.legend") %></h3></div>
-    <div class="achievements">
-      <%= achievement_schema(t("achievements.gold_name"),nil,:class=>'gold') %>
-      <div><%= t("achievements.gold") %></div>
-      <br />
-      <%= achievement_schema(t("achievements.silver_name"),nil,:class=>'silver') %>
-      <div><%= t("achievements.silver") %></div>
-      <br />
-      <%= achievement_schema(t("achievements.brown_name"),nil,:class=>'bronze') %>
-      <div><%= t("achievements.brown") %></div>
-    </div>
+    <p>This is sample for testing</p>
   </div>
 </div>
 <div class="clear"></div>
