--- a/app/views/main/_rhelper.html.erb
+++ b/app/views/main/_rhelper.html.erb
@@ -1,9 +1,9 @@
 <div class="rhelper">
   <div class="block">
-    <div class="title"><h3>What is QARoR?</h3></div>
+    <div class="title"><h3>What is KEYSTACK?</h3></div>
     <div class="bdesc">
-      It's open source Questions &amp; Answers platform write for Ruby on Rails enthusiasts.
-      <div><a href="http://github.com/mateuszdw/qaror">FORK on GitHub</a></div>
+      It's an Questions &amp; Answers platform written on ruby on rails for posting questions and getting the solutions
+      <div><a href="http://github.com/mateuszdw/qaror">FORK on GitHub s</a></div>
     </div>
   </div>
   <div class="block">
