--- a/app/views/main/_top.html.erb
+++ b/app/views/main/_top.html.erb
@@ -1,4 +1,4 @@
 <div class="top">
-<%= link_to t("thrs.new.title"),new_thr_url,:class=> 'ui_button green' %>
+<%= link_to 'New Question',new_thr_url,:class=> 'btn btn-primary btn-lg' %>
 <%= render 'shared/searchform' %>
 </div>
