--- a/app/views/users/_user_stuff.html.erb
+++ b/app/views/users/_user_stuff.html.erb
@@ -1,10 +1,12 @@
-<div class="user_stuff">
+	<div class="user_stuff">
   <% unless current_user %>
-      <%= link_to t(:login), login_url, :class=>'ui_button' %>
-      <%= link_to t('users.new'), register_url,:class=>'ui_button' %>
+      <%= link_to t(:login), login_url, :class=>'btn btn-success' %>
+      <%= link_to t('users.new'), register_url,:class=>'btn btn-info' %>
   <% else %>
       <%= user_label_small(current_user) %>
-      <%= link_to t(:profile), profile_url, :class=>'ui_button' %>
-      <%= link_to t(:logout), logout_url, :class=>'ui_button notsoimportant' %>
+      
+     <%= link_to t(:profile),profile_url,:class=>'btn btn-success'%>
+      
+      <%= link_to t(:logout),logout_url, :class=>'btn btn-danger'%>
   <% end %>
 </div>
