sugn up and login page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%=h (!yield(:title).blank? && yield(:title)) || "Questions & Answers platform on Rails" %></title>
+  <title><%=h (!yield(:title).blank? && yield(:title)) || "Questions & Answers platform" %></title>
   <% if controller_name == 'main' %>
-  <meta name="keywords" content="Questions & Answers platform on Rails" />
+  <meta name="keywords" content="Questions & Answers platform" />
   <meta name="description" content="Questions & Answers platform on Rails" />
   <% end %>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
