--- a/app/views/layouts/_bottom.html.erb
+++ b/app/views/layouts/_bottom.html.erb
@@ -1,15 +1,11 @@
 <div id="bottom">
-  <div class="inner_bottom">
+  
 
-      <div class="left info"> Copyright &copy; 2012 Keystack </div>
-
-      
-
-      <div class="left">
-        <%= render_navigation(:context => :bottom) %>
+    <div id="footer" >
+      <div class="container">
+        <p class="text-muted credit" style="color:white;">@copyright 2015 Keystack. All rights reserved.</p> 
       </div>
-      <div class="clear"></div>
-  </div>
+    </div>
 </div>
 </body>
 </html>
