--- a/app/views/main/_rhelper.html.erb
+++ b/app/views/main/_rhelper.html.erb
@@ -1,13 +1,12 @@
 <div class="rhelper">
   <div class="block">
 
-    <div class="title"><h3>What is KEYSTACK?</h3></div>
-    <div class="bdesc">
-      It's an Questions &amp; Answers platform written on ruby on rails for posting questions and getting the solutions
-      <div><a href="http://github.com/mateuszdw/qaror">FORK on GitHub s</a></div>
-
+    <div class="alert alert-info"><h3>What is KEYSTACK?</h3>
     
-    </div>
+      It's an Questions &amp; Answers platform written on ruby on rails for posting questions and getting the solutions.
+      
+  
+  </div>
   </div>
   <div class="block">
     <div class="title"><h3>Latest tags</h3></div>
