--- a/app/views/thrs/_form.html.erb
+++ b/app/views/thrs/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@thr) do |f| %>
   <% if action_name.include?("edit") || action_name.include?("update") %>
     <% if @thr.versions.count > 0 %>
-      <div class="field">
+      <div class="form-group">
         <%= label_tag t("activerecord.attributes.thr.versions") %> &nbsp;
         <%= select_tag(:version,
             options_for_select(@thr.versions.map {|v| ["#{v.index} #{v.user.name} - #{l(v.created_at,:format=>:long)} - #{v.summary}",v.index]}.insert((@thr.versions.count),["-- #{t(:current)} --",@thr.versions.count]),@current_version),
