--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
     <div class="inner_header clear_wrapper">
       <div class="left" style="margin-left: -15%;">
         <a href="/"><img src="/assets/keystone.jpg" class="logo" width="150" height="100" ></a>
+        <%= link_to 'Ask Question',new_thr_url,:class=> 'btn btn-warning btn-lg', :style => "margin-left: 20px;" %>
       </div>
       <div class="right">
         <%= render 'users/user_stuff' %>
