--- a/app/views/ans/_form.html.erb
+++ b/app/views/ans/_form.html.erb
@@ -2,7 +2,7 @@
 <%= form_for(@an,url) do |f| %>
   <% if action_name.include?("edit") || action_name.include?("update") %>
     <% if @an.versions.count > 0 %>
-      <div class="field">
+      <div class="form-group">
           <%= label_tag 'Wersje' %>
           <%= select_tag(:version,
               options_for_select(@an.versions.map {|v| ["#{v.user.name} - v#{v.number} - #{l(v.created_at,:format=>:long)} #{v.summary}",v.number]},@an.version),
@@ -12,11 +12,11 @@
   <% else %>
     <%= hidden_field_tag 'an[thr_id]',@thr.id %>
   <% end %>
-  <div class="field">
+  <div class="form-group">
     <%= f.text_area :content, :size=> '82x3' %>
   </div>
   <% if action_name.include?("edit") || action_name.include?("update") %>
-    <div class="field">
+    <div class="form-group">
       <%= f.label :summary %>
       <%= f.text_field :vsummary %>
     </div>
@@ -26,11 +26,10 @@
       <%= f.simple_captcha %>
     </div>
   <% end %>
-  <div class="field">
-    <%= flash_form_messages(:an) %>
+  <div class="form-group">
     <%= field_messages_for @an %>
   </div>
   <div class="actions">
-    <%= f.submit t('ans.submit'), :class=>"ui_button" %>
+    <%= f.submit t('ans.submit'), :class=>"btn btn-primary" %>
   </div>
 <% end %>
