--- a/app/views/thrs/_form.html.erb
+++ b/app/views/thrs/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@thr) do |f| %>
   <% if action_name.include?("edit") || action_name.include?("update") %>
     <% if @thr.versions.count > 0 %>
-      <div class="field">
+      <div class="form-group">
         <%= label_tag t("activerecord.attributes.thr.versions") %> &nbsp;
         <%= select_tag(:version,
             options_for_select(@thr.versions.map {|v| ["#{v.index} #{v.user.name} - #{l(v.created_at,:format=>:long)} - #{v.summary}",v.index]}.insert((@thr.versions.count),["-- #{t(:current)} --",@thr.versions.count]),@current_version),
@@ -9,20 +9,20 @@
       </div>
     <% end %>
   <% end %>
-  <div class="field">
-    <%= f.text_field :title ,:autocomplete => :off, :placeholder=> t("thrs.new.title_ph") %>
+  <div class="form-group">
+    <%= f.text_field :title ,:autocomplete => :off, :placeholder=> t("thrs.new.title_ph"), :style => "height: 35px;width: 348px;" %>
     <div id="fast_search_results"></div>
   </div>
-  <div class="field">
-    <%= f.text_area :content, :size=> '85x4',:placeholder=> t("thrs.new.content_ph") %>
+  <div class="form-group">
+    <%= f.text_area :content, :size=> '85x4',:placeholder=> t("thrs.new.content_ph"),:style => "height: 35px;width: 348px;" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%#= f.label :tagnames %>
     <div id="tags_preview"></div>
-    <%= f.text_field :tagnames,:id=>:tagit, :placeholder=> t("thrs.new.tagnames_ph",:min=>Tag::MIN_TAGS,:max=>Tag::MAX_TAGS) %>
+    <%= f.text_field :tagnames,:id=>:tagit, :placeholder=> t("thrs.new.tagnames_ph",:min=>Tag::MIN_TAGS,:max=>Tag::MAX_TAGS),:style => "height: 35px;width: 348px;" %>
   </div>
   <% if action_name.include?("edit") || action_name.include?("update") %>
-    <div class="field">
+    <div class="form-group">
       <%= f.label :summary %>
       <%= f.text_field :vsummary %>
     </div>
@@ -32,10 +32,10 @@
       <%= f.simple_captcha %>
     </div>
   <% end %>
-  <div class="field">
+  <div class="form-group">
     <%= field_messages_for @thr %>
   </div>
   <div class="actions">
-    <%= f.submit t(:send),:class=>"ui_button" %>
+    <%= f.submit "Post",:class=>"btn btn-large btn-primary " %>
   </div>
 <% end %>
