--- a/app/views/thrs/_form_retag.html.erb
+++ b/app/views/thrs/_form_retag.html.erb
@@ -1,14 +1,14 @@
 <%= form_for(@thr) do |f| %>
   <%= f.hidden_field :vsummary, :value => 'przetagowanie' %>
-  <div class="field">
+  <div class="form-group">
     <div id="tags_preview"></div>
     <%= f.label :tagnames %>
     <%= f.text_field :tagnames,:id=>:tagit %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= field_messages_for @thr %>
   </div>
-  <div class="actions">
-    <%= f.submit :class=>"ui_button" %>
+  <div class="form-group">
+    <%= f.submit :class=>"btn btn-success" %>
   </div>
 <% end %>
