--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,8 +4,7 @@
     <div id="avatars">
       <div id="gravatar">
         <%= image_tag(APP_CONFIG['gravatar_url'] + Digest::MD5.hexdigest(@user.email) + "?d=identicon&s=125") %>
-        <div><%= link_to t('users.change_gravatar'),"http://pl.gravatar.com/" %></div>
-      </div>
+        </div>
     </div>
   </div>
   <div class="col-md-4">
@@ -59,7 +58,7 @@
     </div>
   </div>
   <div class="actions">
-    <%= f.submit t(:save), :class=> 'ui_button' %>
+    <%= f.submit "Save", :class=> 'btn btn-large btn-success' %>
   </div>
 </div>
 <% end %>
