--- a/app/views/users/_user_label.html.erb
+++ b/app/views/users/_user_label.html.erb
@@ -3,15 +3,21 @@
     <%= image_tag(APP_CONFIG['gravatar_url'] + Digest::MD5.hexdigest(@user.email) + "?d=identicon&s=40",
       :class=> 'left',:width=>'40px',:height=>'40px') %>
     <div class="name"><%= link_to raw(@user.sname),@user %></div>
-    <span class="reputation"><%= @user.reputation %></span>
+    <span class="reputation" data-toggle="tooltip" data-placement="bottom"><%= @user.reputation %></span>
     <%= render 'users/user_ranks' %>
     <div class="clear"></div>
   </div>
 <% else %>
   <div class="user_ls">
     <div class="name"><%= link_to raw(@user.sname),@user %></div>
-    <span class="reputation"><%= link_to @user.reputation, votes_user_path(@user) %></span>
+    <span class="reputation"><%= link_to @user.reputation, votes_user_path(@user), title: 'Number of questions', 'data-toggle' => 'tooltip', 'data-placement' => 'bottom'%></span>
   </div>
 <% end %>
+
+<script type="text/javascript">
+$(function () {
+  $('[data-toggle="tooltip"]').tooltip();
+})
+</script>
 
 
